# wayland-tracer

./: .gitignore  COPYING  Makefile.am  README  configure.ac
man/: wayland-tracer.man
src/: connection.c  core-protocol.c  core-protocol.h  frontend-analyze.c  frontend-analyze.h  frontend-bin.c  frontend-bin.h  tracer-analyzer.c  tracer-analyzer.h  tracer.c  tracer.h  wayland-private.h
